; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_mbedtls_ssl_fetch_input.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_mbedtls_ssl_fetch_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 (i32, i64, i64)*, i32 (i32, i64, i64, i32)*, i64, i64, i64, i64, i64, i64, i32, %struct.TYPE_11__*, %struct.TYPE_10__*, i32*, i32* }
%struct.TYPE_11__ = type { i64, i64, i32 }
%struct.TYPE_10__ = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"=> fetch input\00", align 1
@.str.1 = private unnamed_addr constant [60 x i8] c"Bad usage of mbedtls_ssl_set_bio() or mbedtls_ssl_set_bio()\00", align 1
@MBEDTLS_ERR_SSL_BAD_INPUT_DATA = common dso_local global i32 0, align 4
@MBEDTLS_SSL_BUFFER_LEN = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [31 x i8] c"requesting more data than fits\00", align 1
@.str.3 = private unnamed_addr constant [25 x i8] c"in_left: %d, nb_want: %d\00", align 1
@MBEDTLS_ERR_SSL_TIMEOUT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [22 x i8] c"ssl->f_recv(_timeout)\00", align 1
@MBEDTLS_ERR_SSL_CONN_EOF = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [15 x i8] c"<= fetch input\00", align 1
@MBEDTLS_ERR_SSL_INTERNAL_ERROR = common dso_local global i32 0, align 4
@MBEDTLS_ERR_SSL_WANT_READ = common dso_local global i32 0, align 4
@MBEDTLS_SSL_HANDSHAKE_OVER = common dso_local global i64 0, align 8
@MBEDTLS_SSL_IS_SERVER = common dso_local global i64 0, align 8
@MBEDTLS_SSL_RENEGOTIATION_PENDING = common dso_local global i64 0, align 8
@MBEDTLS_SSL_TRANSPORT_DATAGRAM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ssl_fetch_input(%struct.TYPE_12__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_12__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %11 = load i32 (i32, i64, i64)*, i32 (i32, i64, i64)** %10, align 8
  %12 = icmp eq i32 (i32, i64, i64)* %11, null
  br i1 %12, label %13, label %21

13:                                               ; preds = %2
  %14 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %14, i32 0, i32 1
  %16 = load i32 (i32, i64, i64, i32)*, i32 (i32, i64, i64, i32)** %15, align 8
  %17 = icmp eq i32 (i32, i64, i64, i32)* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 1, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.1, i64 0, i64 0))
  %20 = load i32, i32* @MBEDTLS_ERR_SSL_BAD_INPUT_DATA, align 4
  store i32 %20, i32* %3, align 4
  br label %130

21:                                               ; preds = %13, %2
  %22 = load i64, i64* %5, align 8
  %23 = load i64, i64* @MBEDTLS_SSL_BUFFER_LEN, align 8
  %24 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %27, i32 0, i32 3
  %29 = load i64, i64* %28, align 8
  %30 = sub i64 %26, %29
  %31 = sub i64 %23, %30
  %32 = icmp ugt i64 %22, %31
  br i1 %32, label %33, label %36

33:                                               ; preds = %21
  %34 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 1, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0))
  %35 = load i32, i32* @MBEDTLS_ERR_SSL_BAD_INPUT_DATA, align 4
  store i32 %35, i32* %3, align 4
  br label %130

36:                                               ; preds = %21
  %37 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %37, i32 0, i32 5
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* %5, align 8
  %41 = inttoptr i64 %40 to i8*
  %42 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 2, i8* %41)
  br label %43

43:                                               ; preds = %121, %36
  %44 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %44, i32 0, i32 5
  %46 = load i64, i64* %45, align 8
  %47 = load i64, i64* %5, align 8
  %48 = icmp ult i64 %46, %47
  br i1 %48, label %49, label %128

49:                                               ; preds = %43
  %50 = load i64, i64* %5, align 8
  %51 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %51, i32 0, i32 5
  %53 = load i64, i64* %52, align 8
  %54 = sub i64 %50, %53
  store i64 %54, i64* %7, align 8
  %55 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %56 = call i64 @ssl_check_timer(%struct.TYPE_12__* %55)
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %49
  %59 = load i32, i32* @MBEDTLS_ERR_SSL_TIMEOUT, align 4
  store i32 %59, i32* %6, align 4
  br label %103

60:                                               ; preds = %49
  %61 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %62 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %61, i32 0, i32 1
  %63 = load i32 (i32, i64, i64, i32)*, i32 (i32, i64, i64, i32)** %62, align 8
  %64 = icmp ne i32 (i32, i64, i64, i32)* %63, null
  br i1 %64, label %65, label %86

65:                                               ; preds = %60
  %66 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %67 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %66, i32 0, i32 1
  %68 = load i32 (i32, i64, i64, i32)*, i32 (i32, i64, i64, i32)** %67, align 8
  %69 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %70 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %69, i32 0, i32 8
  %71 = load i32, i32* %70, align 8
  %72 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %73 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %72, i32 0, i32 2
  %74 = load i64, i64* %73, align 8
  %75 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %76 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %75, i32 0, i32 5
  %77 = load i64, i64* %76, align 8
  %78 = add i64 %74, %77
  %79 = load i64, i64* %7, align 8
  %80 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %81 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %80, i32 0, i32 9
  %82 = load %struct.TYPE_11__*, %struct.TYPE_11__** %81, align 8
  %83 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %82, i32 0, i32 2
  %84 = load i32, i32* %83, align 8
  %85 = call i32 %68(i32 %71, i64 %78, i64 %79, i32 %84)
  store i32 %85, i32* %6, align 4
  br label %102

86:                                               ; preds = %60
  %87 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %88 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %87, i32 0, i32 0
  %89 = load i32 (i32, i64, i64)*, i32 (i32, i64, i64)** %88, align 8
  %90 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %91 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %90, i32 0, i32 8
  %92 = load i32, i32* %91, align 8
  %93 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %94 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %93, i32 0, i32 2
  %95 = load i64, i64* %94, align 8
  %96 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %97 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %96, i32 0, i32 5
  %98 = load i64, i64* %97, align 8
  %99 = add i64 %95, %98
  %100 = load i64, i64* %7, align 8
  %101 = call i32 %89(i32 %92, i64 %99, i64 %100)
  store i32 %101, i32* %6, align 4
  br label %102

102:                                              ; preds = %86, %65
  br label %103

103:                                              ; preds = %102, %58
  %104 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %105 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %104, i32 0, i32 5
  %106 = load i64, i64* %105, align 8
  %107 = load i64, i64* %5, align 8
  %108 = inttoptr i64 %107 to i8*
  %109 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 2, i8* %108)
  %110 = load i32, i32* %6, align 4
  %111 = call i32 @MBEDTLS_SSL_DEBUG_RET(i32 2, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0), i32 %110)
  %112 = load i32, i32* %6, align 4
  %113 = icmp eq i32 %112, 0
  br i1 %113, label %114, label %116

114:                                              ; preds = %103
  %115 = load i32, i32* @MBEDTLS_ERR_SSL_CONN_EOF, align 4
  store i32 %115, i32* %3, align 4
  br label %130

116:                                              ; preds = %103
  %117 = load i32, i32* %6, align 4
  %118 = icmp slt i32 %117, 0
  br i1 %118, label %119, label %121

119:                                              ; preds = %116
  %120 = load i32, i32* %6, align 4
  store i32 %120, i32* %3, align 4
  br label %130

121:                                              ; preds = %116
  %122 = load i32, i32* %6, align 4
  %123 = sext i32 %122 to i64
  %124 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %125 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %124, i32 0, i32 5
  %126 = load i64, i64* %125, align 8
  %127 = add i64 %126, %123
  store i64 %127, i64* %125, align 8
  br label %43

128:                                              ; preds = %43
  %129 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %130

130:                                              ; preds = %128, %119, %114, %33, %18
  %131 = load i32, i32* %3, align 4
  ret i32 %131
}

declare dso_local i32 @MBEDTLS_SSL_DEBUG_MSG(i32, i8*) #1

declare dso_local i64 @ssl_check_timer(%struct.TYPE_12__*) #1

declare dso_local i32 @MBEDTLS_SSL_DEBUG_RET(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
